# mujoco_ycb

./: CMakeLists.txt  LICENSE  package.xml
assets/meshes/clf_coke/: model.mtl
assets/meshes/clf_cornflakes/: model.mtl
assets/meshes/clf_fanta/: model.mtl
assets/meshes/clf_hagelslag/: model.mtl
assets/meshes/clf_spezi/: model.mtl
assets/xacro/clf_coke/: assets.xml.xacro  model.xml.xacro
assets/xacro/clf_cornflakes/: assets.xml.xacro  model.xml.xacro
assets/xacro/clf_fanta/: assets.xml.xacro  model.xml.xacro
assets/xacro/clf_hagelslag/: assets.xml.xacro  model.xml.xacro
assets/xacro/clf_pringles/: assets.xml.xacro
assets/xacro/clf_spezi/: assets.xml.xacro  model.xml.xacro
assets/xacro/ycb_apple/: assets.xml.xacro
assets/xacro/ycb_banana/: assets.xml.xacro
assets/xacro/ycb_bleach_cleanser/: assets.xml.xacro
assets/xacro/ycb_bowl/: assets.xml.xacro
assets/xacro/ycb_cracker_box/: assets.xml.xacro
assets/xacro/ycb_cup/: assets.xml.xacro
assets/xacro/ycb_dice/: assets.xml.xacro
assets/xacro/ycb_fork/: assets.xml.xacro
assets/xacro/ycb_gelatin_box/: assets.xml.xacro
assets/xacro/ycb_knife/: assets.xml.xacro
assets/xacro/ycb_lemon/: assets.xml.xacro
assets/xacro/ycb_master_chef_can/: assets.xml.xacro
assets/xacro/ycb_mustard/: assets.xml.xacro
assets/xacro/ycb_orange/: assets.xml.xacro
assets/xacro/ycb_peach/: assets.xml.xacro
assets/xacro/ycb_pear/: assets.xml.xacro
assets/xacro/ycb_plate/: assets.xml.xacro
assets/xacro/ycb_plum/: assets.xml.xacro
assets/xacro/ycb_potted_meat_can/: assets.xml.xacro
(+7 files in other folders)
